crates/iroha_derive/tests/config_base_ui_fail/generics.stderr
error: [derive(ReadConfig)]: generics are not supported
 --> tests/config_base_ui_fail/generics.rs:4:13
  |
4 | struct Test<T> {
  |             ^
